assets/supcik.css
@import url('https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Work+Sans:100,200,300,400,500,600,700,800,900&display=swap');

.highlight td,
.highlight th {
    text-align: left;
}

body {
    font-family: 'Roboto', sans-serif;
}

h1,h2,h3,h4,h5,h6,.navbar-item {
    font-family: 'Work Sans', sans-serif;
}

.bold-title {
    font-family: 'Work Sans', sans-serif;
    font-weight: 700;
}

.title {
    font-family: 'Work Sans', sans-serif;
    font-weight: 600;
}

.subtitle {
    font-family: 'Work Sans', sans-serif;
    font-weight: 500;
}

img {
    border-radius: 0px;
    border: none;
    box-shadow: none;
}

